--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -9,13 +9,20 @@
 
     <label for="">
       Email:
-      <input type="email" name="email" required />
+      <input type="email" name="email" value="<%=email%>" required />
     </label>
 
     <label for="">
       Password:
       <input type="password" name="password" required />
     </label>
+
+    <label for="">
+      Repeat password:
+      <input type="password" name="Rpassword" required />
+    </label>
+
+
     <button type="submit">Sign Up</button>
   </form>
 
