login-signup check

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
+  <nav id="nav">
+    <div>
+      Logo
+    </div>
+
+    <div>
+      <ul id="navList">
+        <li>Profile</li>
+        <li>Collections</li>
+        <li>Marketplace</li>
+        <li>Trading</li>
+      </ul>
+    </div>
+
+    <div>
+      <p><a style="text-decoration: none" href="/auth/accountcheck"> Play Now </a></p>
+    </div>
+  </nav>
+
   <body>
     <%- body %>
 
