--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,3 +10,16 @@ a {
 h1 {
   color: 15px;
 }
+
+#nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: -30px;
+}
+
+#navList {
+  display: flex;
+  gap:30px;
+  list-style: none;
+}
