--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -2,7 +2,7 @@
 
 <section>
     <form action="/auth/login" method="POST">
-        <label>Username: <input type="text" name="username"></label>
+        <label>Username: <input type="text" name="username" value="<%=username%>"></label>
         <label>Password: <input type="password" name="password"></label>
         <button type="submit">Log In</button>
         <div>
