--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -4,7 +4,7 @@
 
     <label for="">
       Username:
-      <input type="text" name="username" required />
+      <input type="text" name="username" value="<%=username%>" required />
     </label>
 
     <label for="">
