--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,7 +23,8 @@
     </div>
 
     <div>
-      <p><a style="text-decoration: none" href="/auth/accountcheck"> Play Now </a></p>
+      <p><a id="btn-playnow" style="text-decoration: none" href="/auth/accountcheck"> Play Now </a></p>
+      <p><a id="btn-logout" style="text-decoration: none" href="/auth/logout"> Logout </a></p>
     </div>
   </nav>
 
