--- a/partials/nav-bar.ejs
+++ b/partials/nav-bar.ejs
@@ -1,21 +1,24 @@
-<nav id="nav">
+<nav id="generalNav">
+  <div id="nav">
     <div>
       Logo
     </div>
 
     <div>
       <ul id="navList">
-        <li>Profile</li>
+        <li><p><a id="btn-logout" style="text-decoration: none" href="/"> Main Page </a></p></li>
+        <li><p><a id="btn-logout" style="text-decoration: none" href="/user/profile"> Profile </a></p></li>
         <li>Collections</li>
         <li>Marketplace</li>
         <li>Trading</li>
       </ul>
     </div>
 
-    <div>
+    <div id="navRight">
         <p><a id="btn-playnow" style="text-decoration: none" href="/auth/accountcheck"> Play Now </a></p>
     <% if (session) { %>
       <p><a id="btn-logout" style="text-decoration: none" href="/auth/logout"> Logout </a></p>
     <% } %>
     </div>
+  </div>
 </nav>
