--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,25 +1,39 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+body {  
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;  
+  margin: 0;
 }
 
 a {
-  color: #00b7ff;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 17px;
 }
 
 h1 {
   color: 15px;
+}
+#generalNav {
+  background-color:rgb(26, 26, 26);
 }
 
 #nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: -30px;
+  margin-top: -30px;  
+  padding: 40px 50px 15px 50px;
 }
 
 #navList {
   display: flex;
   gap:30px;
   list-style: none;
+  align-items: center;
+  color: white;
+  font-size: 17px;
+}
+
+#navRight {
+  display: flex;
+  gap: 30px;
 }
