--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,5 +1,5 @@
 <%- include("../../partials/nav-bar.ejs") %>
 <h1>Profile</h1>
-<div id="game-board">       
-    <canvas id="canvas" width="600" height="600"></canvas>
+<div id="game-board" style="display: flex; align-items: center; justify-content: center;">
+    <canvas id="canvas" width="1488" height="768"></canvas>
 </div>  
