--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -4,7 +4,7 @@
 <section>
     <form action="/auth/login" method="POST">
         <label>Username: <input type="text" name="username" value="<%=username%>"></label>
-        <label>Password: <input type="password" name="password"></label>
+        <label>Password: <input type="password" name="password" autofocus></label>
         <button type="submit">Log In</button>
         <div>
             <a href="#">Forgot your password?</a>
