--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -10,7 +10,7 @@
 
     <label for="">
       Email:
-      <input type="email" name="email" value="<%=email%>" required />
+      <input type="email" name="email" value="<%=email%>" required autofocus />
     </label>
 
     <label for="">
