--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include("../partials/nav-bar.ejs") %>
 
-<h1><%= appTitle %> 🚀</h1>
+<h1>Bohun Upas</h1>
 <p>Welcome Ironhacker!</p>
 
 <% if (session) { %>
