--- a/views/auth/signup-login.ejs
+++ b/views/auth/signup-login.ejs
@@ -4,7 +4,7 @@
   
       <label for="">
         Enter Username:
-        <input type="text" name="username" required />
+        <input type="text" name="username" required autofocus />
       </label>
   
       <button type="submit">Continue</button>
