--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -7,7 +7,7 @@
         <label>Password: <input type="password" name="password"></label>
         <button type="submit">Log In</button>
         <div>
-            <a href="#">Forgot your password?</a>
+            <a href="#" id="forgotPassword">Forgot your password?</a>
         </div>
     </form>
     <% if (errorMessage !== "") { %>
