--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -19,7 +19,7 @@
     </label>
 
     <label for="">
-      Repeat password:
+      Confirm password:
       <input type="password" name="Rpassword" required />
     </label>
 
