--- a/partials/nav-bar.ejs
+++ b/partials/nav-bar.ejs
@@ -9,6 +9,8 @@
         <li><p><a id="btn-logout" style="text-decoration: none" href="/"> Main Page </a></p></li>
         <% if (session) { %>
           <li><p><a id="btn-logout" style="text-decoration: none" href="/user/profile"> Profile </a></p></li>
+          <li><p><a id="btn-logout" style="text-decoration: none" href="/user/characterProfile"> Character </a></p></li>
+          <li><p><a id="btn-logout" style="text-decoration: none" href="/user/createcharacter"> Create </a></p></li>
           <li>Collections</li>
           <li>Marketplace</li>
           <li>Trading</li>
