--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,3 +47,20 @@ h1 {
 #gameSection {
   background-color: black;
 }
+
+#characterProfile {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+}
+
+#stats {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 30px;
+}
+
+.characterFrame {
+  border-color: transparent;
+}
