--- a/partials/nav-bar.ejs
+++ b/partials/nav-bar.ejs
@@ -12,12 +12,12 @@
           <% if (sessionRace.length === 1) { %>
             <li><p><a style="text-decoration: none" href="/user/createcharacter"> Character </a></p></li>            
             <li><p><a style="text-decoration: none" href="/user/profile"> Profile </a></p></li>
+            <li><p><a style="text-decoration: none" href="/user/soulkeeper/<%=sessionRace[0]._id%>">Soulkeeper</a></p></li>
             <% } %>
             
             <% if (sessionRace.length === 0) { %>              
            <li><p><a style="text-decoration: none" href="/user/characterProfile"> Character </a></p></li>            
           <% } %>
-          <li><a style="text-decoration: none" href="/user/soulkeeper">Soulkeeper</a></li>
           <li>Collections</li>
           <li>Marketplace</li>
           <li>Trading</li>
