Soulkeeper work, player inventory

--- a/views/user/characterProfile.ejs
+++ b/views/user/characterProfile.ejs
@@ -14,7 +14,7 @@
         <p>Race: <%=profile.character[0].race%></p>
         <p>Weapon: <%=profile.character[0].weapon%></p>
         <p>Armor: <%=profile.character[0].armor%></p>
-        <p>Artifact: <%=profile.character[0].artifact%></p>
+        <p>Artefact: <%=profile.character[0].artefact%></p>
         <p>Souls: <%=profile.character[0].souls%></p>
     </div>
 </section>
