--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {  
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;  
   margin: 0;
-  background-color: black;
+  background-color: rgb(19, 19, 19);
   color: white;
 }
 
@@ -19,7 +19,7 @@ h1 {
   color: 15px;
 }
 #generalNav {
-  background-color:rgb(26, 26, 26);
+  background-color:rgba(221, 190, 176, 0);
 }
 
 #nav {
@@ -27,7 +27,25 @@ h1 {
   justify-content: space-between;
   align-items: center;
   margin-top: -30px;  
-  padding: 40px 50px 15px 50px;
+  padding: 30px 50px 0px 50px;
+}
+
+.navImg a {
+  box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.301);
+  box-shadow: 0 10px 0px rgb(36, 30, 28);
+  border-color: rgba(204, 163, 147, 0.137);
+  background-color: rgb(88, 79, 69);
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 9px;
+  padding: 20px 6px 5px 6px;   
+  transition: padding 0.5s, background-color 0.5s, margin 0.5s;  
+}
+
+.navImg a:hover {  
+  padding: 50px 15px 5px 15px; 
+  background-color: rgb(163, 134, 102);     
+  margin: 30px
 }
 
 #navList {
@@ -63,4 +81,10 @@ h1 {
 
 .characterFrame {
   border-color: transparent;
+}
+
+#characterName {
+  font-size: 80px;
+  font-weight: bolder;
+  text-shadow: 0 0 15px rgba(255, 255, 255, 0.397);
 }
