--- a/views/user/characterProfile.ejs
+++ b/views/user/characterProfile.ejs
@@ -10,7 +10,7 @@
         <iframe class="characterFrame" width="600" height="600" src="https://my.spline.design/untitled-4b790425ef4f04c074add4bb192060c1/"></iframe>     
     <% } %>
     <div id="stats">    
-        <h1><%=profile.username%></h1>
+        <h1 id="characterName"><%=profile.username%></h1>
         <p>Race: <%=profile.character[0].race%></p>
         <p>Souls: <%=profile.character[0].souls%></p>
         <div>
