--- a/partials/nav-bar.ejs
+++ b/partials/nav-bar.ejs
@@ -1,7 +1,7 @@
 <nav id="generalNav">
   <div id="nav">
-    <div>
-      Logo
+    <div class="navImg">
+      <img  src="/images/Icons/Eye.png" height="60px">
     </div>
 
     <div>
