--- a/views/user/characterProfile.ejs
+++ b/views/user/characterProfile.ejs
@@ -38,7 +38,7 @@
             <div>Damage: <%=item.damage%></div>
             <div>For: <%=item.race%></div>
             <div>Value: <%=item.value%></div>
-            <form action="/equipment/equipItem/<%=character._id%>/<%=item._id%>/<%=item.equip%>/<%=item.invIndex%>/<%=item._id%>" method="POST">
+            <form action="/equipment/equipItem/<%=character._id%>/<%=item._id%>/<%=item.equip%>/<%=item._id%>" method="POST">
                 <button type="submit">Equip</button>
             </form>
             <form action="/equipment/sellItem/<%=character._id%>/<%=item._id%>/<%=item.equip%>/<%=item.invIndex%>" method="POST">
