--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.cdnfonts.com/css/ica-rubrik-black');
+
+
 body {  
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;  
   margin: 0;
   background: rgb(27,156,204);
 background: radial-gradient(circle, rgba(27,156,204,1) 0%, rgba(31,20,17,1) 0%, rgba(0,0,0,1) 100%);
-  color: white;
+  color: rgb(238, 238, 238);
+  font-family: 'ICA Rubrik', sans-serif;
 }
 
 #forgotPassword {
@@ -33,7 +37,7 @@ h1 {
 
 .navImg a {
   box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.301);
-  box-shadow: 0 10px 0px rgb(46, 33, 29);
+  box-shadow: 0 15px 0px rgb(46, 33, 29);
   border-color: rgba(204, 163, 147, 0.137);
   background-color: rgb(100, 71, 62);
   border-width: 2px;
@@ -86,7 +90,12 @@ h1 {
 }
 
 #characterName {
-  font-size: 120px;
+  font-size: 150px;
   font-weight: bolder;
-  text-shadow: 0 0 15px rgba(255, 255, 255, 0.397);
+  text-shadow: 0 0px 10px rgb(255, 255, 255);
+  color: rgb(255, 230, 224);  
+  margin-top: 0;
+  margin-bottom: 50px;
+  margin-right: 0px;
+  padding-right: 0px;
 }
