--- a/views/user/characterProfile.ejs
+++ b/views/user/characterProfile.ejs
@@ -2,7 +2,7 @@
 <section id="characterProfile">    
     <div id="stats">    
         <h1 id="characterName"><%=profile.username%></h1>
-        <p>Race: <%=profile.character[0].race%></p>
+        <p id="characterRace">The <%=profile.character[0].race%></p>
         <p>Souls: <%=profile.character[0].souls%></p>
         <div>
             Equipped:
