--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,11 +75,11 @@ h1 {
   display: flex;
   justify-content: center;
   padding-top: 100px;
+  flex-direction: row;
 }
 
 #stats {
   display: flex;
-  flex-direction: column;
   align-items: flex-start;
   padding-left: 30px;
 }
@@ -105,4 +105,80 @@ h1 {
   color: rgb(255, 139, 31);
   text-shadow: 0 6px black;
   margin-left: 20px;
+}
+
+.removeListStyle {
+  list-style: none;
+}
+
+#equipment {
+  font-size: 30px;
+  margin-left: -23px;
+  display: none;
+}
+
+.allignList {
+  display: flex;  
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-left: -80px;
+  width: 200px;
+  height: 300px;
+  margin-bottom: -20px;
+  gap: 20px
+}
+
+.itemName {
+  font-size: 16px;
+  color:rgb(206, 206, 206);
+  text-shadow: 0 3px rgb(49, 38, 38);  
+  padding: 3px;
+  margin-top: 0px;
+}
+
+.inlineStats {  
+  display: flex; 
+  gap: 20px;
+  color: rgb(200, 255, 0);
+  font-size: 16px;
+}
+
+.weaponStats {
+  box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.301);
+  box-shadow: 0 10px 0px rgba(61, 36, 33, 0.644);
+  border-color: rgba(61, 36, 33, 0.644);
+  background-color:rgba(94, 56, 51, 0.644);
+  padding: 5px;
+  border-width: 5px;
+  border-style: solid;
+  border-radius: 9px;
+  display: flex;
+  justify-content: flex-start; 
+  flex-direction: column;  
+  align-items: center;
+  margin-top: 0px;
+}
+
+.itemTable {
+  border-color: rgba(61, 36, 33, 0.644);
+  background-color: rgb(24, 18, 17);
+  border-radius: 13px;
+  border-width: 5px;
+  border-style: solid;
+  box-shadow: 
+  inset 0 0 50px 25px rgb(17, 16, 16),
+  0 10px rgba(61, 36, 33, 0.644);
+  transition: margin-top 0.5s ease, background-color 0.5s ease;
+}
+
+.itemTable:hover {
+  padding-bottom: 0px;
+  margin-top: -10px;
+  background-color: rgb(73, 48, 43);
+}
+
+#equipmentCards {
+  display: flex;
+  gap: 40px;
 }
