--- a/views/user/characterProfile.ejs
+++ b/views/user/characterProfile.ejs
@@ -1,26 +1,88 @@
 <%- include("../../partials/nav-bar.ejs") %>
 <section id="characterProfile">    
-    <div id="stats">    
-        <h1 id="characterName"><%=profile.username%></h1>
-        <p id="characterRace">The <%=profile.character[0].race%></p>
-        <p>Souls: <%=profile.character[0].souls%></p>
+    <div id="stats"> 
+        <div>  
         <div>
-            Equipped:
-            <ul>
-                <li>Weapon:</li>
+        <h1 id="characterName"><%=profile.username%></h1>
+        <p id="characterRace">The <%=profile.character[0].race%></p> 
+        <p>Souls: <%=profile.character[0].souls%></p> 
+        </div>
+        
+<div >   
+            
+        <div id="equipmentCards">
+
+            <div class="itemTable">       
+            <ul class="removeListStyle">
+                <!-- <li id="equipment">Equipment</li> -->
+
                 <% if (character.weapon.length) { %>
-                <ul>
-                    <li>Name: <%=character.weapon[0].name%></li>
-                    <li>Damage: <%=character.weapon[0].damage%></li>
-                    <li>Type: <%=character.weapon[0].type%></li>
-                    <li>Value: <%=character.weapon[0].value%> Souls</li>
+                <ul class="removeListStyle allignList">
+                    <li><img class="itemImage" src="<%=character.weapon[0].image%>" width="130px"></li>
+                    <div class="weaponStats">                   
+                    <li class="itemName"><%=character.weapon[0].name%></li>
+                        <div class="inlineStats">
+                            <!-- <li><%=character.weapon[0].type%></li> -->
+                            <li>⚔️ <%=character.weapon[0].damage%></li>
+                            <li>👻 <%=character.weapon[0].value%></li>
+                        </div>
+                    </div> 
                 </ul>
                 <% } %>
-                <li>Armor: <%=profile.character[0].armor%></li>
-                <li>Artefact: <%=profile.character[0].artefact%></li>
-            </ul>
+            </div> 
+            
+            <div class="itemTable">       
+                <ul class="removeListStyle">
+                    <!-- <li id="equipment">Equipment</li> -->
+    
+                    <% if (character.weapon.length) { %>
+                    <ul class="removeListStyle allignList">
+                        <li><img class="itemImage" src="<%=character.weapon[0].image%>" width="130px"></li>
+                        <div class="weaponStats">                   
+                        <li class="itemName"><%=character.weapon[0].name%></li>
+                            <div class="inlineStats">
+                                <!-- <li><%=character.weapon[0].type%></li> -->
+                                <li>⚔️ <%=character.weapon[0].damage%></li>
+                                <li>👻 <%=character.weapon[0].value%></li>
+                            </div>
+                        </div> 
+                    </ul>
+                    <% } %>
+                </div>  
+                
+                <div class="itemTable">       
+                    <ul class="removeListStyle">
+                        <!-- <li id="equipment">Equipment</li> -->
+        
+                        <% if (character.weapon.length) { %>
+                        <ul class="removeListStyle allignList">
+                            <li><img class="itemImage" src="<%=character.weapon[0].image%>" width="130px"></li>
+                            <div class="weaponStats">                   
+                            <li class="itemName"><%=character.weapon[0].name%></li>
+                                <div class="inlineStats">
+                                    <!-- <li><%=character.weapon[0].type%></li> -->
+                                    <li>⚔️ <%=character.weapon[0].damage%></li>
+                                    <li>👻 <%=character.weapon[0].value%></li>
+                                </div>
+                            </div> 
+                        </ul>
+                        <% } %>
+                    </div>      
+               
+           
         </div>
+                <!-- <li>Armor: <%=profile.character[0].armor%></li>
+                <li>Artefact: <%=profile.character[0].artefact%></li> -->                
+            </ul>
+</div>
     </div>
+
+
+    
+
+    
+
+
     <% if (profile.character[0].race === "Human") { %>
         <iframe class="characterFrame" width="800" height="800" src="https://my.spline.design/untitled-efbebd8fdddb4af99ddc732238ccbb9e/"></iframe>     
     <% } %>
