--- a/views/user/characterProfile.ejs
+++ b/views/user/characterProfile.ejs
@@ -35,39 +35,20 @@
                 <ul class="removeListStyle">
                     <!-- <li id="equipment">Equipment</li> -->
     
-                    <% if (character.weapon.length) { %>
+                    <% if (character.armor.length) { %>
                     <ul class="removeListStyle allignList">
-                        <li><img class="itemImage" src="<%=character.weapon[0].image%>" width="130px"></li>
+                        <li><img class="itemImage" src="<%=character.armor[0].image%>" width="130px"></li>
                         <div class="weaponStats">                   
-                        <li class="itemName"><%=character.weapon[0].name%></li>
+                        <li class="itemName"><%=character.armor[0].name%></li>
                             <div class="inlineStats">
-                                <!-- <li><%=character.weapon[0].type%></li> -->
-                                <li>⚔️ <%=character.weapon[0].damage%></li>
-                                <li>👻 <%=character.weapon[0].value%></li>
+                                <!-- <li><%=character.armor[0].type%></li> -->
+                                <li>⚔️ <%=character.armor[0].protection%></li>
+                                <li>👻 <%=character.armor[0].value%></li>
                             </div>
                         </div> 
                     </ul>
                     <% } %>
-                </div>  
-                
-                <div class="itemTable">       
-                    <ul class="removeListStyle">
-                        <!-- <li id="equipment">Equipment</li> -->
-        
-                        <% if (character.weapon.length) { %>
-                        <ul class="removeListStyle allignList">
-                            <li><img class="itemImage" src="<%=character.weapon[0].image%>" width="130px"></li>
-                            <div class="weaponStats">                   
-                            <li class="itemName"><%=character.weapon[0].name%></li>
-                                <div class="inlineStats">
-                                    <!-- <li><%=character.weapon[0].type%></li> -->
-                                    <li>⚔️ <%=character.weapon[0].damage%></li>
-                                    <li>👻 <%=character.weapon[0].value%></li>
-                                </div>
-                            </div> 
-                        </ul>
-                        <% } %>
-                    </div>      
+                </div>                     
                
            
         </div>
