--- a/views/user/characterProfile.ejs
+++ b/views/user/characterProfile.ejs
@@ -6,6 +6,8 @@
         <h1 id="characterName"><%=profile.username%></h1>
         <p id="characterRace">The <%=profile.character[0].race%></p> 
         <p>Souls: <%=profile.character[0].souls%></p> 
+        <p>XP: <%=profile.character[0].experience%> / 100</p> 
+        <p>Level: <%=profile.character[0].level%></p> 
         </div>
         
 <div >   
