--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -89,6 +89,11 @@ h1 {
   margin-top: -100px;  
 }
 
+.aboveNameStats {
+  display: flex;
+  gap: 30px
+}
+
 #characterName {
   font-size: 150px;
   font-weight: bolder;
