--- a/views/user/characterProfile.ejs
+++ b/views/user/characterProfile.ejs
@@ -2,12 +2,14 @@
 <section id="characterProfile">    
     <div id="stats"> 
         <div>  
+           <div class="aboveNameStats">
+            
+            <p>Level: <%=profile.character[0].level%></p> 
+            <p>XP: <%=profile.character[0].experience%> / 100</p> 
+           </div>
         <div>
         <h1 id="characterName"><%=profile.username%></h1>
         <p id="characterRace">The <%=profile.character[0].race%></p> 
-        <p>Souls: <%=profile.character[0].souls%></p> 
-        <p>XP: <%=profile.character[0].experience%> / 100</p> 
-        <p>Level: <%=profile.character[0].level%></p> 
         </div>
         
 <div >   
@@ -23,9 +25,8 @@
                     <li><img class="itemImage" src="<%=character.weapon[0].image%>" width="130px"></li>
                     <div class="weaponStats">                   
                     <li class="itemName"><%=character.weapon[0].name%></li>
-                        <div class="inlineStats">
-                            <!-- <li><%=character.weapon[0].type%></li> -->
-                            <li>⚔️ <%=character.weapon[0].damage%></li>
+                        <div class="inlineStats">                            
+                            <li>⚔️ <%=character.weapon[0].modifier%></li>
                             <li>👻 <%=character.weapon[0].value%></li>
                         </div>
                     </div> 
@@ -43,8 +44,8 @@
                         <div class="weaponStats">                   
                         <li class="itemName"><%=character.armor[0].name%></li>
                             <div class="inlineStats">
-                                <!-- <li><%=character.armor[0].type%></li> -->
-                                <li>⚔️ <%=character.armor[0].protection%></li>
+                                <% console.log(character.armor[0]) %>                                
+                                <li>⚔️ <%=character.armor[0].modifier%></li>
                                 <li>👻 <%=character.armor[0].value%></li>
                             </div>
                         </div> 
@@ -77,11 +78,11 @@
     <% } %>
     <div id="inventory">
         <h1>Inventory</h1>
+        <p>Souls: <%=profile.character[0].souls%></p> 
         <% character.inventory.forEach((item) => { %>
-            <div>Name: <%=item.name%></div>
-            <div>Type: <%=item.type%></div>
-            <div>Modifier: <%=item.modifier%></div>
-            <div>Value: <%=item.value%></div>
+            <div><%=item.name%></div>            
+            <div><%=item.modifier%></div>
+            <div><%=item.value%></div>
             <form action="/equipment/equipItem/<%=character._id%>/<%=item.type%>/<%=item._id%>" method="POST">
                 <button type="submit">Equip</button>
             </form>
