--- a/views/user/game.ejs
+++ b/views/user/game.ejs
@@ -13,45 +13,57 @@
 
 
 <!-- Character -->
-  <% if (session && sessionRace2.character[0].race === "Dino") { %>
-   <div id="dinoSelect" style="display: block;"></div>
-  <% } else { %>
+<% if (session && sessionRace2.character[0].race === "Dino") { %>
+    <div id="dinoSelect" style="display: block;"></div>
+<% } else { %>
     <div id="dinoSelect" style="display: none;"></div>
-    <% } %>
-  
-  <% if (session && sessionRace2.character[0].race === "Undead") { %>
-    <div id="undeadSelect" style="display: block;"></div>
-    <% } else { %>
-        <div id="undeadSelect" style="display: none;"></div>
-        <% } %>
+<% } %> 
 
-   <% if (session && sessionRace2.character[0].race === "Human") { %>
+<% if (session && sessionRace2.character[0].race === "Undead") { %>
+    <div id="undeadSelect" style="display: block;"></div>
+<% } else { %>
+    <div id="undeadSelect" style="display: none;"></div>
+<% } %>
+
+<% if (session && sessionRace2.character[0].race === "Human") { %>
     <div id="humanSelect" style="display: block;"></div>
-    <% } else { %>
-        <div id="humanSelect" style="display: none;"></div>
-        <% } %>
+<% } else { %>
+    <div id="humanSelect" style="display: none;"></div>
+<% } %>
     
 
 <!-- Weapons -->
-    <% if (session && sessionRace2.character[0].weapon !== "none") { %>
+<% if (session && character.weapon.length) { %>
     <div id="noWeapon" style="display: block;"></div>
-    <% } else { %>
-        <div id="noWeapon" style="display: none;"></div>
-        <% } %>
+    <div id="weaponname"><%=character.weapon[0].name%></div>
+    <div id="damage"><%=character.weapon[0].modifier%></div>
+<% } else { %>
+    <div id="noWeapon" style="display: none;"></div>
+<% } %>
 
 <!-- Armor -->
-    <% if (session && sessionRace2.character[0].armor === "none") { %>
+<% if (session && character.armor.length) { %>
     <div id="noArmor" style="display: block;"></div>
-    <% } else { %>
-        <div id="noArmor" style="display: none;"></div>
-        <% } %>
+    <div id="armorname"><%=character.armor[0].name%></div>
+    <div id="defense"><%=character.armor[0].modifier%></div>
+<% } else { %>
+    <div id="noArmor" style="display: none;"></div>
+<% } %>
+
+<!-- Artefact -->
+<% if (session && character.artefact.length > 0) { %>
+    <div id="noArtefact" style="display: block;"></div>
+    <div id="artefactname"><%=character.artefact[0].name%></div>
+    <div id="artefactmodifier"><%=character.artefact[0].modifier%></div>
+<% } else { %>
+    <div id="noArtefact" style="display: none;"></div>
+<% } %>
 
 <!-- Souls / XP Save -->    
 <form method="POST" action="/user/<%=sessionRace2.character[0]._id%>/game">
     <% if (session) { %>       
     <label>Souls: <input id="souls" style="display: block;" name="souls" type="number" value="<%=sessionRace2.character[0].souls%>" readonly></input></label>
     <label>XP: <input id="experience" style="display: block;" name="experience" type="number" value="<%=sessionRace2.character[0].experience%>" readonly></input></label> 
-    <input id="playerweapon" style="display: block;" name="weapon" value="<%=sessionRace2.character[0].weapon%>" readonly>  
     <% } %></p>
     <button type="submit">Save</button>
 </form>
