Working on Marketplace, pulling current changes

--- a/partials/nav-bar.ejs
+++ b/partials/nav-bar.ejs
@@ -23,7 +23,7 @@
             </a></p></li>                
             <li><p><a style="text-decoration: none" href="/user/soulkeeper/<%=sessionRace[0]._id%>">
               <div class="navImg">
-              <img  src="/images/Icons/Stone.png" height="60px">
+              <img src="/images/Icons/Stone.png" height="60px">
             </div>
             </a></p></li>
             <% } %>     
@@ -31,14 +31,14 @@
             <% if (sessionRace.length === 0) { %>              
            <li><p><a style="text-decoration: none" href="/user/characterProfile">
             <div class="navImg">
-              <img  src="/images/Icons/Bag.png" height="60px">
+              <img src="/images/Icons/Bag.png" height="60px">
             </div>
           </a></p></li>            
           <% } %>
           <!-- <li>Collections</li> -->
           <li>
             <div class="navImg">
-              <p><a><img src="/images/Icons/Coin.png" height="60px"></a></p>
+              <p><a href="/marketplace  "><img src="/images/Icons/Coin.png" height="60px"></a></p>
             </div>
           </li>
           <!-- <li>Trading</li> -->
