Inventory as partial

--- a/views/user/characterProfile.ejs
+++ b/views/user/characterProfile.ejs
@@ -77,30 +77,7 @@
         <iframe class="characterFrame" width="800" height="800" src="https://my.spline.design/untitled-4b790425ef4f04c074add4bb192060c1/"></iframe>     
     <% } %>
 
-    <div id="inventory">
-        <h1>Inventory</h1>
-        <p>Souls: <%=profile.character[0].souls%></p> 
-    <div id="inventoryArray">
-        <% character.inventory.forEach((item) => { %>
-        <div class="invItem">
-            <div><img class="invItemImage" src="<%=item.image%>"></div> 
-
-            <div><%=item.name%></div>   
-            
-            <div class="invStats">
-                
-            </div>
-
-            <div class="invButtons">
-                <form action="/equipment/equipItem/<%=character._id%>/<%=item.type%>/<%=item._id%>" method="POST">
-                    <button class="buttonItem" type="submit">📥 +<%=item.modifier%></button>
-                </form>
-                <form action="/equipment/sellItem/<%=character._id%>/<%=item.type%>/<%=item._id%>" method="POST">
-                    <button class="buttonItem" type="submit">💵 <%=item.value%></button>
-                </form>    
-            </div>       
-        </div>
-        <% }) %>
+    <%- include("../../partials/inventory-display.ejs") %>
     </div>
     </div>
 </section>
