--- a/views/marketplace/create-offer.ejs
+++ b/views/marketplace/create-offer.ejs
@@ -3,10 +3,7 @@
 <h1>Marketplace</h1>
 
 <h1>Create an offer</h1>
+<%- include("../../partials/inventory-display.ejs") %>
 <% if (character) { %>
-<form action="/marketplace/createOffer", method="POST">
-    <% character.inventory.forEach(item => { %>
-        <div></div>
-    <% }) %>
-</form>
+
 <% } %>
