--- a/partials/inventory-display.ejs
+++ b/partials/inventory-display.ejs
@@ -14,7 +14,7 @@
                 <button class="buttonItem" type="submit">📥 +<%=item.modifier%></button>
             </form>
             <form action="/equipment/sellItem/<%=character._id%>/<%=item.type%>/<%=item._id%>" method="POST">
-                <button class="buttonItem" type="submit">💵 <%=item.value%></button>
+                <button class="buttonItem" type="submit">👻 <%=item.value%></button>
             </form>    
         </div>       
     </div>
