--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -220,13 +220,14 @@ h1 {
   box-shadow: 
   inset 0 0 50px 25px rgb(17, 16, 16),
   0 10px rgb(31, 18, 16);
-  transition: margin-top 0.5s ease, background-color 0.5s ease, width 0.5s ease;
+  transition: margin-top 0.5s ease, background-color 0.5s ease, width 0.5s ease, font-size 0.5s ease;
 }
 
 .invItem:hover {  
   margin-top: -10px;
   background-color: rgb(73, 48, 43);
   width: 140px;
+  font-size: 13px;
 }
 
 .invItemImage {
@@ -243,7 +244,28 @@ h1 {
 }
 
 .buttonItem {
-  border-radius: 6px;
+  border-radius: 8px;
+  border-style: solid;
   height: 40px;
   width: 60px;
+  border-color: rgba(61, 36, 33, 0.644);
+  background-color: rgb(36, 27, 25); 
+  border-width: 2px;
+  box-shadow: 0 5px rgb(19, 12, 11);
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  color:white;
+  font-weight: bolder;
+  transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+.buttonItem:hover {
+  background-color: bisque;
+  color: black;
+}
+
+#inventoryTitle {
+  font-size: 50px;
+  margin-top: -50px;
+  margin-bottom: -20px;
 }
