--- a/views/marketplace/index.ejs
+++ b/views/marketplace/index.ejs
@@ -11,4 +11,7 @@
     <form action="/marketplace/select-offer/" method="GET">
         <button type="submit">Create an offer</button>
     </form>
+    <form action="/marketplace/browse-offers/" method="GET">
+        <button type="submit">Browse offers</button>
+    </form>
 <% } %>
